package edu.fiuba.algo3.modelo.Mapa.Casilla;

public abstract class Casilla {
}
