package edu.fiuba.algo3.modelo.Mapa;

public class Mapa {

}
