package edu.fiuba.algo3.modelo.Unidades;

public class Zangano {
    private int cantidad;
    public Zangano(int cantidad) {
        this.cantidad = cantidad;
    }
    public int getCantidad (){
        return this.cantidad;
    }

    public int extraerMineral() {
        return 10;
    }
}
