@startuml
'https://plantuml.com/class-diagram

class Nada {}
abstract class Construccion {}
abstract class ConstruccionZerg {}
abstract class ConstruccionProtoss {}
class Criadero {}
class ReservaProduccion {}
class Extractor {}
class Guarida {}
class Espiral {}
class NexoMineral {}
class Pilon {}
class Asimilador {}
class Acceso {}
class PuertoEscalar {}

class Larva {}
class Zangano {}

class Mapa {}
class Casilla {}
abstract class ProveedorDeRecursoNatural {}
class Volcan {}
class NodoMineral {}
class ImperioProtoss
class ImperioZerg
interface Imperio {}

Casilla <- Mapa
Casilla -> Construccion
Construccion -> Casilla
Casilla --> ProveedorDeRecursoNatural
Casilla "0" ---> "*" Zangano
ProveedorDeRecursoNatural <|-- Volcan
ProveedorDeRecursoNatural <|-- NodoMineral
ConstruccionZerg -up-|> Construccion
ConstruccionProtoss -up-|> Construccion
Nada -up-|> Construccion
Guarida -up-|> ConstruccionZerg
Espiral -up-|> ConstruccionZerg
NexoMineral -up-|> ConstruccionProtoss
Pilon -up-|> ConstruccionProtoss
Asimilador -up-|> ConstruccionProtoss
Acceso -up-|> ConstruccionProtoss
Extractor -up-|> ConstruccionZerg
PuertoEscalar -up-|> ConstruccionProtoss
Criadero -up-|> ConstruccionZerg
Criadero "1" --> "3" Larva
ReservaProduccion -up-|> ConstruccionZerg

Mapa <- Imperio
Imperio <|.. ImperioProtoss
Imperio <|.. ImperioZerg

Volcan --> GasVespeno
NodoMineral --> Mineral


@enduml